--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.5.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
     "lucide-react": "^0.268.0",
