--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.1",
-    "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
     "lucide-react": "^0.268.0",
     "next": "13.4.13",
@@ -24,5 +23,11 @@
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.0.3"
   }
 }
